--- a/package.json
+++ b/package.json
@@ -25,30 +25,40 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.4.6",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.2.1",
+    "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
-    "@nestjs/typeorm": "^8.1.2",
+    "@nestjs/typeorm": "^8.0.4",
+    "bcrypt": "^5.0.1",
+    "connect-redis": "^6.1.3",
     "express-session": "^1.17.3",
+    "faker": "^5.5.3",
     "fastify-secure-session": "^3.2.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.2.24",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/faker": "^6.6.9",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.34",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
