--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/typeorm": "^8.0.4",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
