--- a/env/.development.env
+++ b/env/.development.env
@@ -1,7 +1,7 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USER=nearby
-DATABASE_PASSWORD=n3@rbYP@sswD12#$
+DATABASE_PASSWORD='n3@rbYP@sswD12#$'
 DATABASE_NAME=nearby
 REDIS_HOST=localhost
 REDIS_PORT=6379
