--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
-    "@nestjs/typeorm": "^8.0.4",
+    "@nestjs/typeorm": "^9.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -42,12 +42,11 @@
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "redis": "^4.1.1",
+    "redis": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.24",
-    "typeorm-seeding": "^1.6.1"
+    "typeorm": "^0.3.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
