--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
+    "seed:config": "typeorm-seeding config -r ./dist -c seeding-source.js",
+    "seed:run": "typeorm-seeding seed -r ./dist -c seeding-source.js"
   },
   "overrides": {
     "multer": "^1.4.4-lts.1"
   },
   "dependencies": {
+    "@concepta/typeorm-seeding": "^4.0.0-alpha.5",
     "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
@@ -49,6 +51,7 @@
     "typeorm": "^0.3.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
