--- a/package.json
+++ b/package.json
@@ -29,16 +29,15 @@
     "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
-    "@nestjs/typeorm": "^8.0.4",
+    "@nestjs/typeorm": "^8.1.4",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
     "express-session": "^1.17.3",
-    "faker": "^5.5.3",
     "fastify-secure-session": "^3.2.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
@@ -51,21 +50,19 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^8.0.4",
+    "@nestjs/testing": "^8.4.6",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
-    "@types/faker": "^6.6.9",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.34",
-    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
