--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
@@ -37,10 +38,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "fastify-secure-session": "^3.2.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
@@ -55,10 +58,12 @@
     "@nestjs/testing": "^8.4.6",
     "@types/bcrypt": "^5.0.0",
     "@types/connect-redis": "^0.0.18",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
