--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.4-lts.1"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.4.6",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
@@ -39,9 +40,11 @@
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
     "express-session": "^1.17.3",
     "fastify-secure-session": "^3.2.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -63,6 +66,7 @@
     "@types/express-session": "^1.17.5",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
