--- a/env/.stage.env
+++ b/env/.stage.env
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=n3@rbYP@sswD12#$
 DATABASE_NAME=nearby
 REDIS_HOST=redis
 REDIS_PORT=6379
+MAILER_ADDRESS=kimh060618@gmail.com
+MAILER_PASSWORD=cjanrvjanr12
+MAILER_HOST=smtp.gmail.com
+MAILER_USERNAME=nearby
+BASE_URL=http://api-stage.nearby.com:3000
