--- a/env/.development.env
+++ b/env/.development.env
@@ -6,7 +6,7 @@ DATABASE_NAME=nearby
 REDIS_HOST=localhost
 REDIS_PORT=6379
 MAILER_ADDRESS=kimh060618@gmail.com
-MAILER_PASSWORD=cjanrvjanr12
+MAILER_PASSWORD=..
 MAILER_HOST=smtp.gmail.com
 MAILER_USERNAME=nearby
 BASE_URL=http://localhost:3000
