--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ejs": "^3.1.8",
     "express-session": "^1.17.3",
     "fastify-secure-session": "^3.2.0",
+    "hostid": "^1.1.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
