--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/typeorm": "^8.1.4",
+    "aws-sdk": "^2.1180.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -44,6 +45,7 @@
     "express-session": "^1.17.3",
     "fastify-secure-session": "^3.2.0",
     "hostid": "^1.1.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
@@ -67,6 +69,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
