--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.1",
-    "@nestjs/common": "^8.4.6",
+    "@nestjs/common": "^8.4.7",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.6",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
+    "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/typeorm": "^8.1.4",
-    "aws-sdk": "^2.1180.0",
+    "@nestjs/websockets": "^8.4.7",
+    "aws-sdk": "^2.1181.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -46,8 +48,9 @@
     "express-session": "^1.17.3",
     "fastify-secure-session": "^3.2.0",
     "hostid": "^1.1.1",
-    "multer-s3": "^3.0.1",
+    "multer-s3": "^1.6.0",
     "mysql2": "^2.3.3",
+    "nest-aws-sdk": "^2.1.0",
     "nodemailer": "^6.7.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
