--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/websockets": "^8.4.7",
     "aws-sdk": "^2.1181.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
