--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
+    "@socket.io/redis-adapter": "^7.2.0",
     "aws-sdk": "^2.1181.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -48,6 +49,7 @@
     "express-session": "^1.17.3",
     "fastify-secure-session": "^3.2.0",
     "hostid": "^1.1.1",
+    "ioredis": "^4.28.5",
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nest-aws-sdk": "^2.1.0",
@@ -55,10 +57,11 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "redis": "^4.2.0",
+    "redis": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.1",
     "typeorm": "^0.3.4",
     "uuid": "^8.3.2"
   },
@@ -78,6 +81,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
