--- a/package.json
+++ b/package.json
@@ -33,17 +33,20 @@
     "@nestjs/core": "^8.4.6",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.0.1",
+    "@nestjs/microservices": "^8.4.7",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
     "@socket.io/redis-adapter": "^7.2.0",
+    "@types/cookie": "^0.5.1",
     "aws-sdk": "^2.1181.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express-session": "^1.17.3",
