--- a/env/.development.env
+++ b/env/.development.env
@@ -9,4 +9,8 @@ MAILER_ADDRESS=kimh060618@gmail.com
 MAILER_PASSWORD=uosuvezdqjxqhtdp
 MAILER_HOST=smtp.gmail.com
 MAILER_USERNAME=nearby
-BASE_URL=http://localhost:3000
+AWS_S3_BUCKET_NAME=nearby-development-bucket
+AWS_ACCESS_KEY='AKIA6AIFPD7PZQD5XXP6'
+AWS_SECRET_KEY='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'
+AWS_REGION='ap-northeast-2'
+BASE_URL='http://api-test.nearbycrew.com:3000'
