--- a/_env/.development.env
+++ b/_env/.development.env
@@ -13,4 +13,7 @@ AWS_S3_BUCKET_NAME=nearby-development-bucket
 AWS_ACCESS_KEY='AKIA6AIFPD7PZQD5XXP6'
 AWS_SECRET_KEY='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'
 AWS_REGION='ap-northeast-2'
+CHATBOT_TIMEOUT=5000
+CHATBOT_MAX_REDIRECTION=5
+CHATBOT_URL=http://localhost:8000
 BASE_URL='http://api-test.nearbycrew.com:3000'
