--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/platform-socket.io": "^8.4.7",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
     "@socket.io/redis-adapter": "^7.2.0",
@@ -78,6 +79,7 @@
     "@types/connect-redis": "^0.0.18",
     "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "27.5.0",
